feat: change a lot in style.css

--- a/style.css
+++ b/style.css
@@ -7,16 +7,16 @@ html {
 }
 body{
     width: 80%;
-    max-width: 1100px;
+    
 }
 header{
     position: relative;
     z-index: 1;
 
     padding: 15px 50px;
-    border: 2px solid black;
-    box-shadow: 3px 3px 10px 0 rgba(0, 0, 0, 1);
-    border-radius: 0 0 10px 10px;
+    border: 2px solid rgb(92, 65, 117);
+    box-shadow: 0px 3px 10px 0 rgba(0, 0, 0, 1);
+    border-radius: 0 0 20px 20px;
     background-color: rgba(220, 235, 238);
 }
 .header_nav{
@@ -42,29 +42,33 @@ header{
     color:rgb(92, 65, 117);
 }
 .nav_item:hover {
-    color: rgb(15, 14, 14)
+    color: rgb(15, 14, 14);
 }
 
 
 main{
-    border: 2px solid black;
+    border: 2px solid rgb(92, 65, 117);
     border-bottom: 0;
     border-top: 0;
-    margin: -1% 0;
-    background: linear-gradient(to bottom, rgb(223, 190, 253), rgba(220, 235, 238)  );
+    margin: -4% 0;
+    background: linear-gradient(to bottom, rgb(223, 190, 253), rgba(220, 235, 238));
 }
 .profile{
-    padding: 3% 10%;
+    padding: 6% 0 2% 0;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 .avatar{
+    width: 30%;
     margin: 1% 0;
     padding: 3px 3px 0 3px;
-    border: 2px solid black;
-    box-shadow: 3px 3px 10px 0 rgba(0, 0, 0, 1);
+    border: 2px solid rgb(92, 65, 117);
+    box-shadow: 3px 3px 10px 0 rgb(92, 65, 117);
     border-radius: 10px;
+}
+.avatar img{
+    width: 100%;
 }
 .name{
     display: flex;
@@ -72,20 +76,64 @@ main{
     justify-content: center;
     font: 50px 'Arvo', serif;
     color:rgb(92, 65, 117);
+    font-weight: bold;
 }
 
-
-
-
-
+.information{
+    display: flex;
+    justify-content: space-evenly;
+    padding-bottom: 6%;
+}
+.lists, .description{
+    display: flex;
+    flex-direction: column;
+    color:rgb(0, 0, 0);
+    font: 18px 'Arvo', serif;
+}
+.information h2{
+    color:rgb(92, 65, 117);
+    font-size: 30px;
+}
+.lists{
+    justify-content: space-evenly;
+}
+.lists ul{
+    white-space: nowrap;
+    list-style: none;
+    margin: 20px 0 20px 22px;
+}
+.lists a{
+    color:rgb(92, 65, 117);
+}
+.lists a:visited{
+    color:rgb(92, 65, 117);
+}
+.lists a:hover{
+    color: rgb(15, 14, 14);
+}
+.description{
+    width: 60%;
+}
+.about-me p{
+    margin: 20px 0 20px 22px;
+}
+.code-example p{
+    margin: 20px 0 0 22px;
+}
+.courses ul{
+    list-style: none;  
+    margin: 20px 0 20px 22px; 
+}
 
 footer{
+    position: relative;
+    z-index: 1;
     display: flex;
     justify-content: space-around;
-    border: 2px solid black;
-    box-shadow: 3px -3px 10px 0 rgba(0, 0, 0, 1);
-    border-radius:10px 10px 0 0;
-    background-color: rgba(220, 235, 238, 0.8);  
+    border: 2px solid rgb(92, 65, 117);
+    box-shadow: 0px -3px 10px 0 rgba(0, 0, 0, 1);
+    border-radius: 20px 20px 0 0;
+    background-color: rgb(220, 235, 238);  
     padding: 1%;
 }
 .rsschool_logo{
